--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start": "npm run migration:compile && nest start",
+    "start:dev": "npm run migration:compile && nest build entities && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -19,8 +19,12 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-    "migration:run": "npm run typeorm migration:run -- -d ./libs/providers/src/typeorm/typeorm.config.ts",
-    "migration:gen": "nest build entities --tsc && cross-env npm run typeorm -- -d ./libs/providers/src/typeorm/typeorm.config.ts migration:generate ./migrations/$npm_config_name"
+    "typeorm:config": "npm run typeorm -- -d ./libs/providers/src/typeorm/typeorm-migrations.config.ts",
+    "migration:compile": "tsc -p ./migrations/tsconfig.migration.json",
+    "migration:create": "cross-env npm run typeorm migration:create ./migrations/$npm_config_name",
+    "migration:revert": "npm run typeorm:config migration:revert",
+    "migration:run": "npm run migration:compile && npm run typeorm:config migration:run",
+    "migration:gen": "nest build entities --tsc && cross-env npm run typeorm:config migration:generate ./migrations/$npm_config_name"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
