--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "migration:gen": "nest build entities --tsc && cross-env npm run typeorm:config migration:generate ./migrations/$npm_config_name"
   },
   "dependencies": {
+    "@apollo/server": "^4.7.5",
+    "@nestjs/apollo": "^12.0.7",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/cqrs": "^10.0.1",
+    "@nestjs/graphql": "^12.0.7",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
@@ -40,6 +43,7 @@
     "@types/passport-local": "^1.0.35",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "graphql": "^16.7.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
