--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,6 +53,12 @@
       ],
       "@lib/auth/*": [
         "libs/auth/src/*"
+      ],
+      "@lib/amqp-contracts": [
+        "libs/amqp-contracts/src"
+      ],
+      "@lib/amqp-contracts/*": [
+        "libs/amqp-contracts/src/*"
       ]
     }
   }
